fix range layout issue

--- a/src/styles/range.less
+++ b/src/styles/range.less
@@ -1,6 +1,6 @@
 .range-container {
-margin: 10px 0;
-
+  margin: 10px 0;
+  position: relative;
 }
 
 .range-container .form-control {
@@ -10,8 +10,7 @@ margin: 10px 0;
 }
 
 .range-input-container {
-  margin-top: 5px;
-  position: relative;
+  padding-top: 11px;
   margin-left: 85px;
 }
 
